# wgpu-bug-validation-errors

./: Cargo.toml
data/shaders/sprite/: simple.frag.hlsl  simple.vert.hlsl
src/: components.rs  main.rs  resources.rs  setup.rs  shaders.rs  states.rs  universe.rs
src/graphics/: renderer.rs
src/graphics/pipelines/: mod.rs  sprite.rs
src/systems/: mod.rs  render.rs  spawn.rs
trace/: data3.spv  data4.spv  trace.ron
