[package]
authors = ["Systemcluster <me@systemcluster.me>"]
edition = "2018"
name = "wgpu-bug-validation-errors"
version = "0.1.0"

[dependencies]
bytemuck = {version = "^1.4", features = ["extern_crate_std", "derive"]}
dashmap = "3.11.10"
futures = {version = "^0.3", default-features = false, features = ["std", "executor"]}
image = "0.23.12"
itertools = "0.9.0"
rand = "0.7.3"
shaderc = {git = "https://github.com/google/shaderc-rs", features = ["build-from-source"]}
shipyard = {git = "https://github.com/leudz/shipyard", branch = "master", default-features = false, features = ["std", "panic", "parallel", "serde1"]}
tracing = {version = "0.1"}
tracing-log = {version = "0.1"}
tracing-subscriber = {version = "0.2"}
ultraviolet = {version = "^0.7", features = ["bytemuck", "serde"]}
wgpu = {git = "https://github.com/gfx-rs/wgpu-rs", branch = "master", features = ["trace"]}
winit = {git = "https://github.com/rust-windowing/winit", branch = "master"}
